--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
 
 #¶Ë¿ÚºÅÅäÖÃ
 server.port=11111
+efanurl=http://www.efan.com/
+returnurl=http://123.57.247.203:11111/api/order/updateorder
