--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,15 @@
 #mysql 配置连接字符串:
-spring.datasource.url=jdbc:mysql://101.200.238.155:2333/sing?characterEncoding=UTF-8&autoReconnect=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=NEUsoft@1
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#业务库
+spring.primary.url=jdbc:mysql://101.200.238.155:2333/sing?characterEncoding=UTF-8&autoReconnect=true&useSSL=false
+spring.primary.username=root
+spring.primary.password=NEUsoft@1
+spring.primary.driver-class-name=com.mysql.jdbc.Driver
+#数据库
+spring.secondary.url=jdbc:mysql://101.200.238.155:2333/test?characterEncoding=UTF-8&autoReconnect=true&useSSL=false
+spring.secondary.username=root
+spring.secondary.password=NEUsoft@1
+spring.secondary.driver-class-name=com.mysql.jdbc.Driver
+
 
 #JPA Configuration:
 spring.jpa.database=MySQL
