--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.5.3.RELEASE</version>
-		<relativePath/> <!-- lookup parent from primaryR -->
+		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
 	<properties>
