--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.primary.username=root
 spring.primary.password=NEUsoft@1
 spring.primary.driver-class-name=com.mysql.jdbc.Driver
 #Êý¾Ý¿â
-spring.secondary.url=jdbc:mysql://101.200.238.155:2333/test?characterEncoding=UTF-8&autoReconnect=true&useSSL=false
+spring.secondary.url=jdbc:mysql://101.200.238.155:2333/songs?characterEncoding=UTF-8&autoReconnect=true&useSSL=false
 spring.secondary.username=root
 spring.secondary.password=NEUsoft@1
 spring.secondary.driver-class-name=com.mysql.jdbc.Driver
