--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,13 +4,16 @@ spring.primary.url=jdbc:mysql://101.200.238.155:2333/sing?characterEncoding=UTF-
 spring.primary.username=root
 spring.primary.password=NEUsoft@1
 spring.primary.driver-class-name=com.mysql.jdbc.Driver
-#Êý¾Ý¿â
-spring.secondary.url=jdbc:mysql://101.200.238.155:2333/songs?characterEncoding=UTF-8&autoReconnect=true&useSSL=false
-spring.secondary.username=root
-spring.secondary.password=NEUsoft@1
-spring.secondary.driver-class-name=com.mysql.jdbc.Driver
 
-
+#jdbc
+druid.url=jdbc:mysql://101.200.238.155:2333/songs?characterEncoding=UTF-8&autoReconnect=true&useSSL=false
+druid.driver-class=com.mysql.jdbc.Driver
+druid.username=root
+druid.password=NEUsoft@1
+druid.initial-size=1
+druid.min-idle=1
+druid.max-active=20
+druid.test-on-borrow=true
 #JPA Configuration:
 spring.jpa.database=MySQL
 spring.jpa.show-sql=true  
