更换歌曲数据库

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,9 @@ spring.primary.password=NEUsoft@1
 spring.primary.driver-class-name=com.mysql.jdbc.Driver
 
 #jdbc
-spring.secondary.url=jdbc:mysql://101.200.238.155:2333/songs?characterEncoding=UTF-8&autoReconnect=true&useSSL=false
-spring.secondary.username=root
-spring.secondary.password=NEUsoft@1
+spring.secondary.url=jdbc:mysql://rm-2zek44d8h0p0j761jo.mysql.rds.aliyuncs.com:3306/songs?characterEncoding=UTF-8&autoReconnect=true&useSSL=false
+spring.secondary.username=yuanren
+spring.secondary.password=5e9fNgCYJVvIaLflRNku
 spring.secondary.driver-class-name=com.mysql.jdbc.Driver
 #JPA Configuration:
 spring.jpa.database=MySQL
