--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,10 @@ spring.jpa.hibernate.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
 server.port=11111
 efanurl=http://api.efanyun.com/
 returnurl=http://123.57.247.203:11111/api/order/updateorder
+
+#wx≈‰÷√œÓ…Ë÷√
+appId=wx734728844b17a945
+secret=ffb4f97615ce2f63f3b4c87101fe8d87
+#∆Ô≈£≈‰÷√œÓ
+accessKey=o_qxXubM6dRAw_VHd5UqDoaRsAZpB0kGeJeg9AQe
+secretKey=XAQWoZ_tCokwcUobnP9ntJN2bjju5xlCl9vxicne
