--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
 #mysql 配置连接字符串:
 #业务库
-spring.primary.url=jdbc:mysql://101.200.238.155:2333/sing?characterEncoding=UTF-8&autoReconnect=true&useSSL=false
+spring.primary.url=jdbc:mysql://59449408b7c7b.gz.cdb.myqcloud.com:13324/sings?characterEncoding=UTF-8&autoReconnect=true&useSSL=false&failOverReadOnly=false
 spring.primary.username=root
-spring.primary.password=NEUsoft@1
+spring.primary.password=DOU@dizhu
 spring.primary.driver-class-name=com.mysql.jdbc.Driver
-
 #jdbc
 spring.secondary.url=jdbc:mysql://rm-2zek44d8h0p0j761jo.mysql.rds.aliyuncs.com:3306/songs?characterEncoding=UTF-8&autoReconnect=true&useSSL=false
 spring.secondary.username=yuanren
